Fix overflow

--- a/docs/assets/src/scss/main.sass
+++ b/docs/assets/src/scss/main.sass
@@ -74,6 +74,7 @@ code
 
 .column
     padding: 1rem
+    width: 100%
 
 .or
     color: $gray
